--- a/app/src/main/res/layout/item_pose.xml
+++ b/app/src/main/res/layout/item_pose.xml
@@ -2,35 +2,36 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
     card_view:cardCornerRadius="8dp"
-    card_view:cardElevation="4dp"
+    card_view:cardElevation="2dp"
     android:background="@android:color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/pose_image"
             android:layout_width="140dp"
             android:layout_height="140dp"
-            android:layout_marginTop="-24dp"
             android:src="@drawable/pose_cat" />
 
         <TextView
-            android:id="@+id/titleTextView"
+            android:id="@+id/pose_title"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Cat Pose"
-            android:background="@color/light_beige"
-            android:textColor="@color/brown"
-            android:textSize="14sp"
-            android:textStyle="bold" />
+            android:text="Cat"
+            android:textColor="@color/gray"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="24dp" />
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
