--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#C7946D</color>
-    <color name="light_beige">#F4EDE6</color>
-    <color name="brown">#675D51</color>
-    <color name="light_gray">#F2EAE3</color>
+    <color name="light_beige">#FAF5F0</color>
+    <color name="gray">#454545</color>
 </resources>
