--- a/app/src/main/res/layout/item_pose.xml
+++ b/app/src/main/res/layout/item_pose.xml
@@ -31,7 +31,9 @@
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginTop="4dp"
-            android:layout_marginBottom="24dp" />
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="24dp"/>
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
