--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="primary">#C7946D</color>
+    <color name="primary">#DEC9B3</color>
     <color name="light_beige">#FAF5F0</color>
     <color name="gray">#454545</color>
 </resources>
