--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -64,7 +64,9 @@
         android:layout_marginEnd="24dp"
         android:background="@drawable/round_button"
         android:elevation="2dp"
+        android:contentDescription="Play"
         android:src="@drawable/baseline_play_arrow_24"
+        android:stateListAnimator="@animator/scale_down_on_press"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/title" />
 
